# YoderBlogOfficial

./: NOTES.md  chatbackup.json  db.sqlite3  manage.py  pyproject.toml  replit_zip_error_log.txt  req.txt  requirements.txt
chat/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_room_message.py  0003_room_allowed_users.py  0004_room_allow_all_users.py
main/: forms.py  models.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_remove_comment_name_comment_author.py  0003_alter_comment_author.py  0004_remove_post_author_remove_post_likes_delete_comment_and_more.py  0005_delete_chat.py
main/templates/blog/: about.html  add_category.html  categories.html  chat_layout.html  create_new_comment.html  delete_comment.html  details.html  filter_off.html  home.html  layout.html  navigation.html  post_create.html  post_delete.html  post_detail.html  post_update.html  search_results.html  user_posts.html
main/templates/chat/: chat.html  create_room.html  delete_room.html  (+4 more)
media/: main .css
mysite/: middleware.py  settings.py  urls.py  views.py
post/: forms.py  models.py  urls.py  utils.py  views.py
post/migrations/: 0001_initial.py  0002_post_background_img.py
static/: dark.css  light.css  main.css  robots.txt  sitemap.xml
static/css/: main.css  main2.css  variables.css
static/js/: main.js
users/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_profile_terms.py  0003_profile_are_active_profile_last_active.py  0004_profile_layout.py
(+55 files in other folders)
